GutterRendererPixbuf: fix LAST alignment

Prior to this, FIRST and LAST were equivalent, because the starting y
coordinate was based on the cell, not the line.

https://bugzilla.gnome.org/show_bug.cgi?id=777587